--- a/fhara-modernized.html
+++ b/fhara-modernized.html
@@ -424,15 +424,25 @@
                 P.O. Box 162<br>
                 Herkimer, NY 13357 USA</p>
                 <p style="margin-top: 1rem;"><strong>Webmaster:</strong><br>
-                Chris, <a href="mailto:cbouck01@twcny.rr.com">KB4CMF</a></p>
+                Chris, <a href="/cdn-cgi/l/email-protection#ccafaea3b9afa7fcfd8cb8bbafa2b5e2bebee2afa3a1">KB4CMF</a></p>
             </div>
 
             <div class="card" style="--delay: 0.2s">
                 <div class="card-icon">🌦️</div>
                 <h2>Quick Links</h2>
+                <p style="margin-bottom: 1rem;"><a href="repeaters.html">Local ARES/RACES Repeaters →</a></p>
                 <p style="margin-bottom: 1rem;"><a href="http://www.srh.noaa.gov/data/forecasts/NYZ038.php?warnzone=nyz038&warncounty=nyc043" target="_blank">Local Weather Forecast →</a></p>
                 <p><strong>Need Directions?</strong><br>
                 Talk-in on <span class="frequency">145.110</span> for meeting directions</p>
+            </div>
+        </div>
+
+        <div class="cards" style="margin-top: 2rem;">
+            <div class="card" style="--delay: 0s; grid-column: 1 / -1;">
+                <div class="card-icon">📻</div>
+                <h2>Local ARES/RACES Repeaters</h2>
+                <p>Herkimer County ARES/RACES operates and maintains 5 VHF repeaters in the local area. All repeaters feature emergency power backup and are frequency coordinated through UNYREPCO.</p>
+                <p style="margin-top: 1rem;"><a href="local-repeaters.html">View Repeater Information & Frequencies →</a></p>
             </div>
         </div>
 
@@ -445,9 +455,5 @@
 
         <footer>
             <p>Website created August 27, 2003 • Last updated March 15, 2024</p>
-            <p style="margin-top: 0.5rem;">Comments, corrections, or suggestions? Contact the webmaster: <a href="mailto:cbouck01@twcny.rr.com">KB4CMF</a></p>
-            <p style="margin-top: 1.5rem; opacity: 0.6;">73 de W2FHA</p>
-        </footer>
-    </div>
-</body>
-</html>
+            <p style="margin-top: 0.5rem;">Comments, corrections, or suggestions? Contact the webmaster: <a href="/cdn-cgi/l/email-protection#8deeefe2f8eee6bdbccdf9faeee3f4a3ffffa3eee2e0">KB4CMF</a></p>
+            <p style="margin-
