--- a/fhara-modernized.html
+++ b/fhara-modernized.html
@@ -430,10 +430,9 @@
             <div class="card" style="--delay: 0.2s">
                 <div class="card-icon">🌦️</div>
                 <h2>Quick Links</h2>
-                <p style="margin-bottom: 1rem;"><a href="repeaters.html">Local ARES/RACES Repeaters →</a></p>
-                <p style="margin-bottom: 1rem;"><a href="http://www.srh.noaa.gov/data/forecasts/NYZ038.php?warnzone=nyz038&warncounty=nyc043" target="_blank">Local Weather Forecast →</a></p>
-                <p><strong>Need Directions?</strong><br>
-                Talk-in on <span class="frequency">145.110</span> for meeting directions</p>
+                <p style="margin-bottom: 1rem;"><a href="local-repeaters.html">Local ARES/RACES Repeaters →</a></p>
+                <p style="margin-bottom: 1rem;"><a href="https://forecast.weather.gov/MapClick.php?zoneid=NYZ038" target="_blank">Local Weather Forecast →</a></p>
+                
             </div>
         </div>
 
